lang/macro/tests/ui/fail/49-invalid-mock-context-getter-4.stderr
error: the values of `mock_context_getter` attribute among declarations of overloaded function `foo` is not consistent
 --> $DIR/49-invalid-mock-context-getter-4.rs:6:9
  |
6 |         fn foo(&self);
  |         ^^^^^^^^^^^^^^
